info-modal update
added info-modal and plans on to how the modal will function all throughout the project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     <script src="script.js" defer></script>
 
 
@@ -18,7 +19,7 @@
         <img class="header-photo" src="./video-game-league-of-legends-zed-facebook-cover.jpg" alt="League of Legends Header Photo">
     </header>
     <section class="search-sect">
-        <label for="search">Search:</label>
+        <label id="search-label" for="search">Search:</label>
         <input type="text" class="search" name="search" id="search-bar">
     </section>
     <div class="container" id="container">
